k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          # hier wird keine eigen erstelltes Image genutzt
          # sondern das Standard-Postgres Image von Docker Hub
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
            # Standard-Verzeichnis von Postgres zur Datenablage
              mountPath: /var/lib/postgresql/data
              # innerhalb des persistenten Volumes werden alle Daten in
              # Ordner postgres gespeichert (auf Host)
              subPath: postgres
