k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          # hier wird keine eigen erstelltes Image genutzt
          # sondern das Standard-Redis Image von Docker Hub
          image: redis
          ports:
            - containerPort: 6379
