k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: saho87/multi-worker
          # multi worker braucht keine Portfreigaben
          # kein anderes Objekt benötigt Zugriff auf multi-worker
